# stern-brocot-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  homographic.cpp  main.cpp  tree.cpp  tree.h
src/: arithmetic.cpp  arithmetic.h  bihomographic.cpp  bihomographic.h  homographic.cpp  homographic.h  shanks.cpp  shanks.h  tests.cpp  tests.h  tree.cpp  tree.h
